# Sentinel-AI

./: .env.example  .gitignore  README.md  docker-compose.dev.yml  docker-compose.yml  railway.toml  requirements-dev.txt
.github/workflows/: publish-sdk.yml
agents/: demo_a.py  demo_b.py  demo_c.py  demo_d.py  demo_e.py
dashboard/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.ts  vite.config.ts
dashboard/src/: App.tsx  index.css
database/: audit_writer.py  schema.cypher  stream_consumer.py  stream_writer.py
docs/: demo-scripts.md  runbook.md
gateway/: Dockerfile  config.py  main.py  metrics.py  openapi.yaml  requirements.txt
gateway/auth/: api_keys.py  jwt.py
gateway/classifier/: heuristics.py
gateway/cognitive_path/: handler.py
gateway/fast_path/: allowlist.py  denylist.py  rate_limiter.py  router.py  threshold.py
gateway/middleware/: auth.py
gateway/models/: agents.py  requests.py
gateway/routes/: agents.py  decisions.py  policies.py  tool_calls.py  websocket.py
gateway/websocket/: manager.py
judge/: cascade.py  circuit_breaker.py  client.py  models.py  requirements.txt  tier1.py  tier3.py
judge/prompts/: faithfulness.j2  intent_check.j2
policies/: loader.py  schema.yaml
policies/examples/: financial-v1.yaml  financial-v2.yaml  financial-v3.yaml
scripts/: activate_policy.py  cmd_guard.ps1  gmail_guarded_send.py  gmail_oauth_bootstrap.py  gmail_read_test.py  install_terminal_hooks.ps1  seed_neo4j.py  terminal_guard.py
sentinel-sdk/: README.md  __init__.py  client.py  pyproject.toml
shared/: neo4j_client.py  redis_client.py
tests/: conftest.py
tests/e2e/: conftest.py  test_demo_a.py  (+2 more)
(+20 files in other folders)
